--- a/team-dashboard/index.html
+++ b/team-dashboard/index.html
@@ -181,6 +181,7 @@ body::before {
   align-items: center;
   justify-content: center;
   min-height: 460px;
+  padding: 40px 0;
 }
 #constellation-svg {
   position: absolute;
