--- a/team-dashboard/index.html
+++ b/team-dashboard/index.html
@@ -194,8 +194,10 @@ body::before {
 /* ── Nodes Container ── */
 .nodes-container {
   position: relative;
-  width: min(520px, 90%);
-  height: min(520px, 100%);
+  width: 520px;
+  aspect-ratio: 1;
+  max-height: calc(100vh - 160px);
+  max-width: calc(100vh - 160px);
   overflow: visible;
 }
 
