--- a/team-dashboard/index.html
+++ b/team-dashboard/index.html
@@ -68,7 +68,8 @@ body::before {
   z-index: 1;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
 
 /* ── Header ── */
